@@ -7,6 +7,7 @@ SMF 2.0.9
 September 2014
 -------------------------------------------------------------------------------
  ! Fix possible XSS exploits in package manager (Reported by Arantor)
+ ! Fix possible XSS exploits with forum name and maintenance mode message (Reported by guest)
 
 
 SMF 2.0.8														   June 18 2014
